Une première version du s-Quark(VHDL)

--- a/quark_IP.sim/sim_1/behav/xsim.dir/tb_top_level_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/quark_IP.sim/sim_1/behav/xsim.dir/tb_top_level_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,7 +4,7 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1846317</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Dec 10 11:11:30 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Dec 17 17:45:03 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2017.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>de716fec99bd4178bb9fd88f7dfa3000</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-7700 CPU @ 3.60GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3200.000 MHz</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>unknown</TD>
-  <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>unknown</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM)2 Duo CPU     E8400  @ 3.00GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3000.000 MHz</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Debian</TD>
+  <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Debian GNU/Linux 7.11 (wheezy)</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>3.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -48,10 +48,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>compiler_memory=197048_KB</TD>
-    <TD>compiler_time=0.28_sec</TD>
-    <TD>simulation_image_code=46 KB</TD>
-    <TD>simulation_image_data=4 KB</TD>
+<TR ALIGN='LEFT'>    <TD>compiler_memory=196484_KB</TD>
+    <TD>compiler_time=0.53_sec</TD>
+    <TD>simulation_image_code=48 KB</TD>
+    <TD>simulation_image_data=3 KB</TD>
 </TR><TR ALIGN='LEFT'>    <TD>total_instances=6</TD>
     <TD>total_nets=0</TD>
     <TD>total_processes=17</TD>
